deploy/kubernetes/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: grpc-ping-pong
spec:
  type: ClusterIP
  selector:
    app: grpc-ping-pong
  ports:
  - port: 50051
