deploy/kubernetes/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: lb-k8s-grpc-ping-pong
    alb.ingress.kubernetes.io/backend-protocol-version: "GRPC"
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: grpc-ping-pong
  name: grpc-ping-pong
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - backend:
          service:
            name: grpc-ping-pong
            port:
              number: 50051
        path: /*
        pathType: ImplementationSpecific
